crates/clan/clan-core/tests/snapshots/clan_golden__kwal_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Matches
  Total matches: 2
  File              Speaker  Utterance                  
  ----------------  -------  ---------------------------
  eng-conversation  SPE      *SPE:	Triangle kept going .
  eng-conversation  GES      *GES:	angle kept going .   

Keyword counts
  "going": 2
