crates/clan/clan-core/tests/snapshots/clan_golden__kwal_multiple@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
----------------------------------------
*** File "pipeout": line 11. Keyword: want 
*CHI:	it's I want cookies .
