crates/clan/clan-core/tests/snapshots/clan_golden__kwal_multiple@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Matches
  Total matches: 1
  File     Speaker  Utterance                  
  -------  -------  ---------------------------
  mor-gra  CHI      *CHI:	it's I want cookies .

Keyword counts
  "want": 1
