crates/clan/clan-core/tests/snapshots/clan_golden__maxwd_mor_gra@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
*** File "pipeout": line 11: 7 characters long:
cookies
