crates/clan/clan-core/tests/snapshots/clan_golden__maxwd_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Max word length: 7
  Mean word length: 4.000
  Total words: 4
  Unique words: 4
  Length  Word   
  ------  -------
  7       cookies
  4       it's   
  4       want   
  1       i      

Speaker: MOT
  Max word length: 5
  Mean word length: 4.000
  Total words: 4
  Unique words: 4
  Length  Word 
  ------  -----
  5       mommy
  4       them 
  4       will 
  3       get
