crates/clan/clan-core/tests/snapshots/clan_golden__mlt_eng@clan.snap
---
source: tests/clan_golden.rs
expression: "&clan_output"
---
MLT for Speaker: *SPE:
  MLT (xxx, yyy and www are EXCLUDED from the word counts, but are INCLUDED in utterance counts):
    Number of: utterances = 2, turns = 2, words = 15
	Ratio of words over turns = 7.500
	Ratio of utterances over turns = 1.000
	Ratio of words over utterances = 7.500
	Standard deviation = 4.500

MLT for Speaker: *GES:
  MLT (xxx, yyy and www are EXCLUDED from the word counts, but are INCLUDED in utterance counts):
    Number of: utterances = 3, turns = 2, words = 13
	Ratio of words over turns = 6.500
	Ratio of utterances over turns = 1.500
	Ratio of words over utterances = 4.333
	Standard deviation = 1.247
