crates/clan/clan-core/tests/snapshots/clan_golden__mlt_eng@rust.snap
---
source: tests/clan_golden.rs
expression: "&rust_output"
---
Speaker: SPE
  Turns: 2
  Total utterances: 2
  Total words: 15
  MLT (utterances): 1.000
  MLT (words): 7.500

Speaker: GES
  Turns: 2
  Total utterances: 3
  Total words: 13
  MLT (utterances): 1.500
  MLT (words): 6.500
