crates/clan/clan-core/tests/snapshots/clan_golden__mlt_speaker_chi@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
MLT for Speaker: *CHI:
  MLT (xxx, yyy and www are EXCLUDED from the word counts, but are INCLUDED in utterance counts):
    Number of: utterances = 1, turns = 1, words = 4
	Ratio of words over turns = 4.000
	Ratio of utterances over turns = 1.000
	Ratio of words over utterances = 4.000
	Standard deviation = NA
