crates/clan/clan-core/tests/snapshots/clan_golden__mlt_speaker_chi@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Turns: 1
  Total utterances: 1
  Total words: 4
  MLT (utterances): 1.000
  MLT (words): 4.000
