crates/clan/clan-core/tests/snapshots/clan_golden__mlu_eng@clan.snap
---
source: tests/clan_golden.rs
expression: "&clan_output"
---
MLU for Speaker: *SPE:
  MLU (xxx, yyy and www are EXCLUDED from the utterance and morpheme counts):
	Number of: utterances = 2, morphemes = 18
	Ratio of morphemes over utterances = 9.000
	Standard deviation = 5.000

MLU for Speaker: *GES:
  MLU (xxx, yyy and www are EXCLUDED from the utterance and morpheme counts):
	Number of: utterances = 3, morphemes = 16
	Ratio of morphemes over utterances = 5.333
	Standard deviation = 1.247
